# kit_teleoperation

./: README.md  package.xml  setup.cfg  setup.py
config/: extrinsinc_camera_calibration_params.yaml
kit_teleoperation/: calibrate_camera.py  calibrate_camera_extrinsic.py  calibrate_camera_intrinsic.py  control_motors.py  view_compressed_img.py  visual_odometry.py
launch/: calibrate_camera_extrinsic_launch.py  calibrate_camera_intrinsic_launch.py  control_motors_launch.py  teleoperation_launch.py  view_compressed_launch.py  view_ekf_launch.py  view_imu_launch.py  view_tf_launch.py
rviz/: ekf.rviz  imu.rviz  tf.rviz
