<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kit_teleoperation</name>
  <version>0.0.0</version>
  <description>ROS 2 teleoperation package for Kit de Robotica</description>
  <maintainer email="pedrofuoco6@gmail.com">pedro-fuoco</maintainer>
  <license>MIT</license>

  <exec_depend>imu_tools</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
